Bug 1836675: Alignment of pageheader to page
Fixes left alignment of pageheader to the rest of the page as it
got pushed out on the left side of the page when padded was added
to the right for the floating menu.

behatnotneeded

(cherry picked from commit da5ba0bb670c1ffa68505a11f58827a895300475)

--- a/htdocs/theme/raw/sass/layout/_layout.scss
+++ b/htdocs/theme/raw/sass/layout/_layout.scss
@@ -231,9 +231,12 @@ body.presentation-iframe {
 }
 
 // push in the right page margin to allow room for floating menu
-.pageheader-actions,
-.pageheader-actions + .main-content {
-    padding-right: 50px;
+.pageheader-actions {
+    padding-right: 0;
+
+    .pageheader-content {
+        padding-right: 50px;
+    }
 }
 
 // Profile page accept friends form
